Remove launch darkly and ff endpoint
