# src/app.ts
@@ -4,9 +4,6 @@ import bodyParser from 'body-parser';
 import compression from 'compression';
 
 import { OpenApiValidator } from '@boxbag/xsh-node-openapi-validator';
-import { createMiddleware } from '@boxbag/xsh-node-logger';
-
-import { logger } from 'src/util/logger';
 import { errorHandler } from 'src/middlewares/handle-error-code';
 
 import { init } from 'src/init';
@@ -16,16 +13,9 @@ import { init } from 'src/init';
  * @param app
  */
 async function setupRoutes(app: Application) {
-    const {
-        rootController,
-        userController,
-        errorController,
-        featureFlagController,
-        healthcheckController
-    } = await init();
+    const { rootController, userController, errorController, healthcheckController } = await init();
 
     app.use('/api/users', userController.getRouter());
-    app.use('/api/feature-flag', featureFlagController.getRouter());
     app.use('/healthcheck', healthcheckController.getRouter());
     app.use('/errors', errorController.getRouter());
     app.use('/', rootController.getRouter());
@@ -40,7 +30,6 @@ export async function createApp(): Promise<express.Application> {
     app.use(compression());
     app.use(bodyParser.json({ limit: '5mb', type: 'application/json' }));
     app.use(bodyParser.urlencoded({ extended: true }));
-    app.use(createMiddleware(logger)); // Needs to be after bodyParser
 
     const openApiValidator = new OpenApiValidator();
     await openApiValidator.install(app);
